# rust-random-logo

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: benchmarks.rs
examples/: basic.rs  config.toml  grid.rs
src/: error.rs  lib.rs  main.rs
src/core/: affine.rs  config.rs  ifs.rs  mod.rs  renderer.rs  types.rs  utils.rs
tests/: integration_tests.rs
